# Yip

./: .gitattributes  .gitignore
BatchFiles/: GenerateProjects.bat
Source/: CMakeLists.txt
Source/Foundation/: CMakeLists.txt  Foundation.h
Source/Foundation/Math/Private/: MathCommon.cpp  Vector.cpp
Source/Foundation/Math/Public/: MathCommon.h  Matrix.h  Vector.h  Vector4.h
Source/YipApp/: CMakeLists.txt  Main.cpp
